--- a/css/styles.css
+++ b/css/styles.css
@@ -2861,7 +2861,7 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #0b5f4e;
+  --bs-btn-bg: #0f6151;
   --bs-btn-border-color: #ffffff00;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #00000000;
