--- a/css/styles.css
+++ b/css/styles.css
@@ -605,8 +605,8 @@ progress {
 }
 
 .img-galeria img{
+  max-width: 720px;
   border-radius: 0.5rem;
-  max-width: 100%;
   margin-bottom: 0.25rem;
 }
 
