--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
   --bs-link-color: #0f6151;
-  --bs-link-hover-color: #0eb66b;
+  --bs-link-hover-color: #12c95b;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -605,7 +605,7 @@ progress {
 }
 
 .img-galeria img{
-  max-width: 720px;
+  max-width: 80%;
   border-radius: 0.5rem;
   margin-bottom: 0.25rem;
 }
@@ -2863,7 +2863,7 @@ textarea.form-control-lg {
   --bs-btn-color: #fff;
   --bs-btn-bg: #0f6151;
   --bs-btn-border-color: #ffffff00;
-  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-color: #1ab597;
   --bs-btn-hover-bg: #00000000;
   --bs-btn-hover-border-color: #0f513200;
   --bs-btn-focus-shadow-rgb: 60, 198, 171;
@@ -6673,12 +6673,13 @@ textarea.form-control-lg {
 
 .text-bg-primary {
   color: #fff !important;
-  background-color: RGBA(26, 188, 156, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(0, 89, 42, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-secondary {
   color: #fff !important;
-  background-color: RGBA(44, 62, 80, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(0, 130, 71, var(--bs-bg-opacity, 1)) !important;
+
 }
 
 .text-bg-success {
@@ -10851,7 +10852,7 @@ html {
 }
 
 .page-section {
-  padding-top: 100px;
+  padding-top: 70px;
   padding-bottom: calc(100vh - 15rem);
 }
 .page-section .page-section-heading {
@@ -10930,13 +10931,13 @@ html {
   color: #fff;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #1abc9c;
+  color: #043d32;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
   color: #fff;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-  color: #1abc9c;
+  color: #043d32;
 }
 #mainNav .navbar-toggler {
   font-size: 80%;
@@ -10958,11 +10959,11 @@ html {
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
     color: #fff;
-    background: #1abc9c;
+    background: #043d32;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
     color: #fff;
-    background: #1abc9c;
+    background: #043d32;
   }
   #mainNav.navbar-shrink {
     padding-top: 1.5rem;
@@ -11060,8 +11061,8 @@ html {
 }
 
 .footer {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   background-color: #2c3e50;
   color: #fff;
 }
